Fix wrong z-index on mobile nav

--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ noscript > div {
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 1;
+        z-index: 2;
         background: #f2f2f2;
         width: 70%;
         height: 100%;
